Fix overflow

--- a/sass/components/_info.sass
+++ b/sass/components/_info.sass
@@ -24,9 +24,13 @@
   &__title
     margin-top: 12px
     margin-bottom: 24px
+    max-height: 190px
+    overflow: hidden
   &__desc
     max-width: 390px
+    max-height: 290px
     margin-bottom: 40px
+    overflow: hidden
     font-size: 20px
     line-height: 36px
     color: $secondary
